CSSR_SOURCES = Main.cpp Hash.cpp States.cpp AllStates.cpp		\
 ParseTree.cpp G_Array.cpp Hash2.cpp Machine.cpp TransTable.cpp		\
 Test.cpp AllStates.h Common.h G_Array.h Hash2.h Hash.h Machine.h	\
 Main.h ParseTree.h States.h Test.h TransTable.h

bin_PROGRAMS = CSSR

doc_DATA = ReadMe.txt ReadMe.pdf ReadMe.ps.gz ReadMe.html
