#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([CSSR],[0.1.1],[Kristina Klinkner <kklinkner@gmail.com>],[cssr],[http://bactra.org/CSSR/])
AC_CONFIG_SRCDIR([AllStates.cpp])
AM_INIT_AUTOMAKE([subdir-objects foreign -Wall])

# Checks for programs.
AC_PROG_CXX

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
